MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/Invoice_Bundle__c.object-meta.xml
<CustomObject>
    <label>Invoice Bundle</label>
    <nameField>
        <displayFormat>INB-{0000}</displayFormat>
        <label>Invoice Bundle #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Bundle</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>