MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Actual_Total_Commission_Payout_Now__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Commission_Payout_Now__c</fullName>
    <label>Actual Total Commission Payout Now</label>
    <summarizedField>Invoice_Line__c.Current_Commission_Payout_Now__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice_Bundle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>