MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Approval_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reject_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval / Reject Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>