MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Bundle</relationshipLabel>
    <relationshipName>Invoice_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>