MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Broker_Agent__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Bundle</relationshipLabel>
    <relationshipName>Invoice_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>