MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Commission_Month__c.field-meta.xml
<CustomField>
    <fullName>Commission_Month__c</fullName>
    <formula>CASE(
  MONTH( Invoice_Date_From__c ),
  1, &quot;JANUARY&quot;,
  2, &quot;FEBRUARY&quot;,
  3, &quot;MARCH&quot;,
  4, &quot;APRIL&quot;,
  5, &quot;MAY&quot;,
  6, &quot;JUNE&quot;,
  7, &quot;JULY&quot;,
  8, &quot;AUGUST&quot;,
  9, &quot;SEPTEMBER&quot;,
  10, &quot;OCTOBER&quot;,
  11, &quot;NOVEMBER&quot;,
  12, &quot;DECEMBER&quot;,
  &quot;Invalid Month&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Month</label>
    <type>Text</type>
</CustomField>