MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Current_On_Hold_Commission__c.field-meta.xml
<CustomField>
    <fullName>Current_On_Hold_Commission__c</fullName>
    <label>Current On-Hold Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>