MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Current_On_Hold_Commission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Current_On_Hold_Commission_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current On-Hold Commission Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>