MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Include_Previous_Commission__c.field-meta.xml
<CustomField>
    <fullName>Include_Previous_Commission__c</fullName>
    <label>Include Previous Commission?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>