MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Invoice_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Bundle</label>
    <referenceTo>Invoice_Bundle__c</referenceTo>
    <relationshipLabel>Invoice Bundle</relationshipLabel>
    <relationshipName>Invoice_Bundle</relationshipName>
    <type>Lookup</type>
</CustomField>