MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Invoice_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Date From</label>
    <type>Date</type>
</CustomField>