MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Invoice_Line_Hold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Hold_Amount__c</fullName>
    <label>Invoice Line Hold Amount</label>
    <summarizedField>Invoice_Line__c.Current_Commission_Payout_Now__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line__c.Is_Hold__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line__c.Invoice_Bundle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>