MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Override_Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Override_Payout_Amount__c</fullName>
    <label>Override Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>