MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Override_Payout_Amount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Payout_Amount_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Payout Amount Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>