MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/POT_Type__c.field-meta.xml
<CustomField>
    <fullName>POT_Type__c</fullName>
    <formula>TEXT( Commission_POT__r.POT_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POT Type</label>
    <type>Text</type>
</CustomField>