MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Split_Percent__c</fullName>
    <formula>Commission_POT__r.Commission_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>