MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Total_Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Paid__c</fullName>
    <label>Total Commission Paid</label>
    <summarizedField>Invoice_Line__c.Commission_Amount_Already_Paid__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice_Bundle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>