MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Total_Commission_Payout_Amount_Now__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Payout_Amount_Now__c</fullName>
    <formula>IF(NOT(ISPICKVAL( Hold_Status__c ,&apos;Hold&apos;)),IF( Override_Payout_Amount__c &gt; 0 ,Override_Payout_Amount__c, Current_Commission_Payout_Now__c +IF(AND(Previous_On_Hold_Commission__c &gt;0, TEXT(Include_Previous_Commission__c)==&apos;Yes&apos;), Previous_On_Hold_Commission__c ,0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission Payout Amount Now</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>