MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/Total_Commission_Pending__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Pending__c</fullName>
    <label>Total Commission Pending</label>
    <summarizedField>Invoice_Line__c.Pending_Commission_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Invoice_Bundle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>