MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/fields/VFPageContent__c.field-meta.xml
<CustomField>
    <fullName>VFPageContent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VFPageContent</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>