MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/recordTypes/Master_Invoice_Bundle.recordType-meta.xml
<RecordType>
    <fullName>Master_Invoice_Bundle</fullName>
    <active>true</active>
    <label>Master Invoice Bundle</label>
</RecordType>