MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/Approval_Invoice_Bundle_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Invoice_Bundle_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(TEXT(Approval_Status__c) == &apos;Approved&apos;,TEXT(Approval_Status__c) ==&apos;Rejected&apos;,TEXT(Approval_Status__c) == &apos;Approval In-Progress&apos;),
    OR(
        ISCHANGED(Override_Payout_Amount__c),
        ISCHANGED(Hold_Status__c)
    )
)</errorConditionFormula>
    <errorMessage>Once the invoice bundle is marked as &quot;Approved&quot; or &quot;Rejected&quot;, no further changes are permitted.</errorMessage>
</ValidationRule>