MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/Cant_Override_Already_Holded_Commission.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Override_Already_Holded_Commission</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        Invoice_Line_Hold_Amount__c &gt; 0, 
        Override_Payout_Amount__c &gt; 0
    ),
    AND(
        ISPICKVAL(Hold_Status__c, &apos;Hold&apos;), 
        Override_Payout_Amount__c &gt; 0
    )
)</errorConditionFormula>
    <errorMessage>You cannot override a commission that is currently on hold. Please release the held commission line before proceeding.</errorMessage>
</ValidationRule>