MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/Hold_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Hold_Reason__c ),TEXT( Hold_Status__c )==&apos;Hold&apos;)</errorConditionFormula>
    <errorMessage>Kindly enter the &quot;Hold Reason&quot; to hold the commission.</errorMessage>
</ValidationRule>