MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/IncludePreviousCommissionBatchValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>IncludePreviousCommissionBatchValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Previous_On_Hold_Commission__c&gt; 0,ISBLANK( TEXT(Include_Previous_Commission__c)),ISPICKVAL( Approval_Status__c ,&apos;Approved&apos;))</errorConditionFormula>
    <errorMessage>Please confirm whether you would like to include the previously on-hold pending commissions. Note that previous month on-hold amounts cannot be carried forward to the next month.</errorMessage>
</ValidationRule>