MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/Negative_Commission_Amount_Not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Commission_Amount_Not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Override_Payout_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Negative Commission Amount not allowed!</errorMessage>
</ValidationRule>