MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/Overall_Hold_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Overall_Hold_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Hold_Status__c,&apos;Hold&apos;), Current_On_Hold_Commission__c &gt; 0)</errorConditionFormula>
    <errorMessage>Please release the commission currently on hold, or alternatively, revert the override amount to place the entire commission on hold.</errorMessage>
</ValidationRule>