MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/Overrid_Commission_Should_not_be_negativ.validationRule-meta.xml
<ValidationRule>
    <fullName>Overrid_Commission_Should_not_be_negativ</fullName>
    <active>true</active>
    <errorConditionFormula>Override_Payout_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Override Payout Amount Should not be negative!</errorMessage>
</ValidationRule>