MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/Override_Amount_Reason_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Override_Amount_Reason_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Override_Payout_Amount__c &gt; 0,ISBLANK( Override_Payout_Amount_Reason__c ))</errorConditionFormula>
    <errorMessage>Override Commission Amount Reason Required!</errorMessage>
</ValidationRule>