MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/validationRules/Override_Commission_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Override_Commission_Amount_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Override_Payout_Amount__c &gt; 0, AND(Override_Payout_Amount__c  &gt;  Actual_Total_Commission_Payout_Now__c ))</errorConditionFormula>
    <errorMessage>You Cannot override more amount than the actual commission amount!</errorMessage>
</ValidationRule>