MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/listViews/External_Invoice_Bundle.listView-meta.xml
<ListView>
    <fullName>External_Invoice_Bundle</fullName>
    <columns>NAME</columns>
    <columns>Broker_Agency__c</columns>
    <columns>Commission_Month__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Invoice_Bundle_Status__c</columns>
    <columns>Invoice_Date_From__c</columns>
    <columns>Invoice_Date_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commission_POT__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Commission_Type__c</field>
        <operation>equals</operation>
        <value>Indirect</value>
    </filters>
    <label>External Invoice Bundle</label>
    <sharedTo>
        <group>Commission_All_Data_Access</group>
        <group>Commission_External</group>
    </sharedTo>
</ListView>