MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/listViews/Internal_Invoice_Bundle.listView-meta.xml
<ListView>
    <fullName>Internal_Invoice_Bundle</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>User__c</columns>
    <columns>Commission_POT__c</columns>
    <columns>POT_Type__c</columns>
    <columns>Split_Type__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Invoice_Bundle_Status__c</columns>
    <columns>Commission_Month__c</columns>
    <columns>Invoice_Date_From__c</columns>
    <columns>Invoice_Date_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commission_POT__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Commission_Type__c</field>
        <operation>equals</operation>
        <value>Direct</value>
    </filters>
    <label>Internal Invoice Bundle</label>
    <sharedTo>
        <group>Commission_All_Data_Access</group>
        <group>Commission_Internal</group>
    </sharedTo>
</ListView>