MODON MRE BPDEV/force-app/main/default/objects/Invoice_Bundle__c/listViews/Internal_Invoice_Bundle_Approvals.listView-meta.xml
<ListView>
    <fullName>Internal_Invoice_Bundle_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Commission_Month__c</columns>
    <columns>Invoice_Date_From__c</columns>
    <columns>Invoice_Date_To__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commission_Type__c</field>
        <operation>equals</operation>
        <value>Direct</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice_Bundle__c.Master_Invoice_Bundle</value>
    </filters>
    <label>Internal Invoice Bundle - Approvals</label>
    <sharedTo>
        <group>Commission_Internal</group>
    </sharedTo>
</ListView>